# api_actix-web_rust_hello-world

./: .env.example  .gitignore  BUILDING_BLOCKS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: api.rs  main.rs  middlewares.rs  types.rs
src/api/: messages.rs  routes.rs  types.rs
src/api/messages/: handlers.rs  routes.rs  types.rs
src/app/: middlewares.rs
src/extractors/: claims.rs
src/handlers/: messages.rs
src/middlewares/: cors.rs  err_handlers.rs  logger.rs  security_headers.rs
