[package]
name = "api_actix-web_rust_hello-world"
version = "0.1.0"
authors = ["Sebastian Estrella <sestrella@stackbuilders.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "^0.5.4"
actix-web = "^3.3.2"
dotenv = "^0.15.0"
env_logger = "^0.9.0"
envy = "^0.4.2"
serde = "^1.0.130"
serde_json = "^1.0.68"
