[package]
name = "api_actix-web_rust_hello-world"
version = "0.2.0"
authors = ["Sebastian Estrella <sestrella@stackbuilders.com>"]
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "^4.3.1" , features = ["rustls"] }
actix-web-httpauth = "0.8.0"
derive_more = "^0.99.16"
dotenv = "^0.15.0"
env_logger = "0.10.0"
envy = "^0.4.2"
jsonwebtoken = "^8.3.0-beta.6"
serde = { version = "1.0.130", features = ["derive"] }
awc = { version = "3.0.0-beta.11", features = [ "openssl" ] }